bk_ida/gccida/c3/build_type_copy
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_type_copy/src/tree.c:3538:12: error: expected expression
*( _OWORD *)( v4 + 9) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_type_copy/src/tree.c:3538:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v4 + 9) = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_type_copy/src/obj/tree.o] Error 1
